2014-08-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.5 release procedure:
 	Changes since nco-4_4_4: https DAP, gxvx, mk, ncl_var
	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1

	* Tweak Makefile for rhea.ccs.ornl.gov

2014-07-14  Charlie Zender  <zender@uci.edu>

	* Tidy ncks.c and nco_grp_utl.c for MPI work

	* Clarify ncrcat packing issues in man page

2014-07-11  Charlie Zender  <zender@uci.edu>

	* Change FL_LST_IN_MAX_LNG from 10 MB to 504576001 B per request of Christine Smit
	Use case: 30 years of hourly data files each 192 characters long

2014-07-10  Charlie Zender  <zender@uci.edu>

	* Deprecate ENABLE_PNETCDF from meaning exposed PnetCDF API
	Soon it will mean that netCDF4 was built with --enable-pnetcdf

2014-07-08  Charlie Zender  <zender@uci.edu>

	* Handle CF ancillary_variables like, well, ancillary variables

2014-07-06  Charlie Zender  <zender@uci.edu>

	* Integrate netCDF4 MPI I/O calls in library, begin conversion with ncks

	* Clean-up nco_get_prg_info(), make consistent with newer netCDF regression tests

2014-07-05  Charlie Zender  <zender@uci.edu>

	* Remove Makefile cruft to simplify building parallel NCO

2014-07-04  Charlie Zender  <zender@uci.edu>

	* Use -5 --fl_fmt=pnetcdf to create NC_FORMAT_CDF5 files

	* Build simply when PNETCDF=Y

2014-07-01  Charlie Zender  <zender@uci.edu>

	* Improve CF-compliance checking infrastructure for mabel/ICESat2

2014-06-17  Charlie Zender  <zender@uci.edu>

	* Implement i18n in ncks, extend to es and fr

2014-06-15  Charlie Zender  <zender@uci.edu>

	* Apply copyright notice changes to most source files

2014-06-13  Charlie Zender  <zender@uci.edu>

	* Update and streamline project homepage

2014-06-12  Charlie Zender  <zender@uci.edu>

	* Improve ncrename diagnostics, fix unset pointer de-reference

2014-06-11  Charlie Zender  <zender@uci.edu>

	* Document --grp_xtr_var_xcl
