@@ -1,10 +1,14 @@
-2014-08-13  Charlie Zender  <zender@uci.edu>
+2014-08-14  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.5 release procedure:
  	Changes since nco-4_4_4: https DAP, gxvx, mk, ncl_var
 	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
 	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1
+
+	* Add cnk_plc_r1d to only change chunking of specified 1-D record variables
+
+2014-08-13  Charlie Zender  <zender@uci.edu>
 
 	* Tweak Makefile for rhea.ccs.ornl.gov
 
